# learn-search-engine-result-template

./: .gitignore  README.md  add_sample_data.py  config.ini  crawler.py  crawler_and_index_sqlitedict_v3_(rectified_parent).py  drop_tables.sql  example_leveldb.py  example_sqlite.py  indexer-tfidf_v1.py  indexer.py  pyproject.toml  requirements.txt  run.sh  search_engine.db  search_engine.db(just tables)  sentence_transformer_indexer.py  test_leveldb.py  testing.py
alembic/: env.py
alembic/versions/: 4d74700503b1_added_initial_table.py  7cd1f76e4cc4_added_initial_table.py  8c755d7e37f4_added_initial_table.py  c21181bc2e04_added_initial_table.py  d00197224895_added_initial_table.py  e8766c99a8e2_added_initial_table.py
app/: document_sample_data.py  main.py  test-sqlite.py  test-sqlitedict.py
app/controller/: get_doc_info.py
app/db/: SentIdToPageid.sqlite  SentIdToSent.sqlite  base.py  body_forward_index.sqlite  body_norm.sqlite  body_wordID_to_word.sqlite  body_word_to_wordID.sqlite  centroid_dict.sqlite  clusToSentId.sqlite  pageID_details.sqlite  pageID_to_parentID.sqlite  pageID_to_url.sqlite  pageidToSentId.sqlite  session.py  title_forward_index.sqlite  title_inverted_index.sqlite  title_norm.sqlite  title_wordID_to_word.sqlite  (+2 more)
data/: html_data.pkl  page0.html
leveldb_database/: LOG
sample_data/: crawler.csv  doc_info.csv  doc_term_1_gram.csv  doc_total_number.csv  original-reterived-data.py  parent_child_link.csv  term_1_gram.csv
sample_leveldb_database/: 000005.ldb  000016.ldb  000018.ldb  000021.ldb  LOG  LOG.old  MANIFEST-000004  MANIFEST-000020
(+21 files in other folders)
